Implementacion de sistema de usuarios

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -12,8 +12,11 @@
     <header>
       <ul>
       <li><a href="/api/products">Products</a></li>
-      <li><a href="/realtimeproducts">Real Time Products</a></li>
+      <li><a href="/api/realtimeproducts">Real Time Products</a></li>
       <li><a href="/api/carts">Carts</a></li>
+      <li><a href="/api/sessions/register">Register</a></li>
+      <li><a href="/api/sessions/login">Login</a></li>
+      <li><a href="/api/sessions/profile">Profile</a></li>
       </ul>
     </header>
     <main class="container">
