Implemented new user system features

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -10,7 +10,8 @@
   </head>
   <body>
     <main class="container">
-      
+  <h1>Bienvenido, {{ user.first_name }} {{ user.last_name }}!</h1>
+  <h1>Tu rol es: {{user.role}}</h1> 
 <table id="main" role="grid">
   <tr>
     <th>Title</th>
